package id.ac.polinema;

public class Account {
    public String ownerName;
    public double balance;
}
