package id.ac.polinema;

public interface Auditable {
    String auditLog();
}
